Creating the main section and article and styling it

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -33,3 +33,20 @@ nav a {
   text-decoration: none;
   color: #fff;
 }
+
+/* ----- Main style -----  */
+
+main {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 0 20px;
+}
+
+article {
+  margin-bottom: 40px;
+  text-align: justify;
+}
+
+article p.meta {
+  font-style: italic;
+}
